test_case/rust-lang_rust/55624_435528747_2.rs
compile_fail,E0690\n#[repr(transparent)]\nstruct LengthWithUnit<U> { // error: transparent struct needs exactly one\n    value: f32,            //        non-zero-sized field, but has 2\n    unit: U,\n}\n